fixed image spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,11 +104,26 @@ margin: auto;
 margin-bottom: 5px; 
 }
 
+#work {
+display: block; 
+margin-left: auto; 
+margin-right: auto;  
+}
+
+.mainWork h3 {
+text-align: center; 
+margin-left: auto; 
+margin-right: auto;
+}
+
 .mainWork img{
 width: 600px; 
 margin-top: 5px;
 flex: 1 1 100%; 
 transition: transform .2s;  
+display: block; 
+margin-left: auto; 
+margin-right: auto;
 }
 
 /*wanted the images under Work to slightly enlarge when you hover your cursor over them */
@@ -120,18 +135,26 @@ transform: scale(1.1);
 width: 200px; 
 height: 200px; 
 margin-top: 10px;
-float: left;
+/*float: left;*/
+display: block; 
+margin-left: auto; 
+margin-right: auto;
 }
 
 .other {
-display: flex;
 flex: 1 1 30%; 
+text-align: center; 
 } 
 
 .projects img {
 transition: transform .2s; 
 flex: 33.33%; 
 padding: 2px; 
+display: inline-block;
+}
+
+.projects {
+display:inline-block;
 }
 
 .projects:hover {
